[gd_scene load_steps=2 format=3 uid="uid://d4gssb2ep7hhg"]

[ext_resource type="Script" uid="uid://cmrpt0mxwofda" path="res://Scenes/ServerSelect/server_add.gd" id="1_0efnc"]

[node name="ServerAdd" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0efnc")

[node name="IPText" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -135.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "Insert IP"
alignment = 1
emoji_menu_enabled = false
metadata/_edit_lock_ = true

[node name="AddButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = 100.0
offset_right = 80.0
offset_bottom = 140.0
grow_horizontal = 2
grow_vertical = 2
text = "Add IP to server list"
metadata/_edit_lock_ = true

[node name="Back" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = 150.0
offset_right = 80.0
offset_bottom = 190.0
grow_horizontal = 2
grow_vertical = 2
text = "Back"
metadata/_edit_lock_ = true

[node name="Direct" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -210.0
offset_right = 80.0
offset_bottom = -170.0
grow_horizontal = 2
grow_vertical = 2
text = "Direct connect"
metadata/_edit_lock_ = true

[connection signal="pressed" from="AddButton" to="." method="_on_add_button_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Direct" to="." method="_on_direct_pressed"]
